<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_address"
            android:icon="@drawable/gardsave32"
            android:title="@string/home" />
        <!--
        <item
            android:id="@+id/nav_scenes"
             android:icon="@android:drawable/ic_menu_gallery"
            android:title="Scenes" />
        <item
            android:id="@+id/nav_group"
             android:icon="@android:drawable/ic_menu_today"
            android:title="Group" />
        <item
            android:id="@+id/nav_enable"
             android:icon="@android:drawable/ic_input_add"
            android:title="Enable" />
            -->
    </group>

    <item android:title="@string/menu_setup_information">
        <menu>
            <item
                android:id="@+id/nav_setup"
                android:icon="@android:drawable/stat_sys_data_bluetooth"
                android:title="@string/scan" />
            <item
                android:id="@+id/nav_disconnect"
                android:icon="@android:drawable/stat_sys_data_bluetooth"
                android:title="@string/disconnect" />
            <item
                android:id="@+id/nav_setting"
                android:icon="@android:drawable/ic_menu_manage"
                android:title="@string/setting" />
            <item
                android:id="@+id/nav_about"
                android:icon="@android:drawable/ic_dialog_info"
                android:title="@string/about" />
        </menu>
    </item>

</menu>
