<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.joybien.gardCharge.SettingParaFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:id="@+id/txtSubject1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_orange_light"
                android:text="@string/Timer_setting"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="30sp" />

            <TimePicker
                android:id="@+id/timePicker"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_weight="0.15"
                android:timePickerMode="spinner" />

            <Button
                android:id="@+id/btnSaveTimer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="240dp"
                android:text="@string/submit"
                android:textAlignment="center"
                android:textAllCaps="false" />

            <TextView
                android:id="@+id/txtSubject2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_orange_light"
                android:text="@string/High_setting"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtCurrent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="30sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="40dp"
                    android:layout_height="30dp"
                    android:paddingTop="7dp"
                    android:text="0.1A"
                    android:textAlignment="center"
                    android:textSize="12sp" />

                <SeekBar
                    android:id="@+id/sbIbf"
                    android:layout_width="238dp"
                    android:layout_height="30dp"
                    android:layout_weight="0.92"
                    android:max="39" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="40dp"
                    android:layout_height="30dp"
                    android:paddingTop="7dp"
                    android:text="4A"
                    android:textAlignment="center"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lcSubject"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/holo_orange_light"
                    android:enabled="false"
                    android:text="@string/Low_setting"
                    android:textStyle="bold" />

                <CheckBox
                    android:id="@+id/checkLe"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <TextView
                android:id="@+id/txtLi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:textAlignment="center"
                android:textSize="30sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/txt0_05A"
                    android:layout_width="40dp"
                    android:layout_height="30dp"
                    android:enabled="false"
                    android:paddingTop="7dp"
                    android:text="0.05A"
                    android:textAlignment="center"
                    android:textSize="12sp" />

                <SeekBar
                    android:id="@+id/sbLi"
                    android:layout_width="238dp"
                    android:layout_height="30dp"
                    android:layout_weight="0.95"
                    android:max="250" />

                <TextView
                    android:id="@+id/txt0_5A"
                    android:layout_width="40dp"
                    android:layout_height="30dp"
                    android:layout_weight="0.10"
                    android:enabled="false"
                    android:paddingTop="7dp"
                    android:text="0.5A"
                    android:textAlignment="center"
                    android:textSize="12sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/lcoffSubject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_orange_light"
                android:enabled="false"
                android:text="@string/Low_OffTime_setting"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtLt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:textAlignment="center"
                android:textSize="30sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/txt0min"
                    android:layout_width="40dp"
                    android:layout_height="30dp"
                    android:enabled="false"
                    android:paddingTop="7dp"
                    android:text="@string/min0"
                    android:textAlignment="center"
                    android:textSize="10sp" />

                <SeekBar
                    android:id="@+id/sbLt"
                    android:layout_width="238dp"
                    android:layout_height="30dp"
                    android:layout_weight="0.95"
                    android:max="60" />

                <TextView
                    android:id="@+id/txt60mins"
                    android:layout_width="40dp"
                    android:layout_height="30dp"
                    android:enabled="false"
                    android:paddingTop="7dp"
                    android:text="@string/mins60"
                    android:textAlignment="center"
                    android:textSize="10sp" />

            </LinearLayout>

            <Button
                android:id="@+id/btnSaveLC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="240dp"
                android:enabled="false"
                android:text="@string/submit"
                android:textAlignment="center"
                android:textAllCaps="false" />
            <!--
                                    <TextView
                                        android:id="@+id/txtSubject3"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:background="@android:color/holo_orange_light"
                                        android:text="Record Sampling Time Interval"
                                        android:textStyle="bold" />

                                    <TextView
                                        android:id="@+id/txtSample"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:textAlignment="center"
                                        android:textSize="20sp" />


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="33dp"
                            android:layout_weight="0.10"
                            android:orientation="horizontal"
                            android:weightSum="1">

                            <TextView
                                android:id="@+id/textView4"
                                android:layout_width="40dp"
                                android:layout_height="30dp"
                                android:paddingTop="7dp"
                                android:text="1min"
                                android:textAlignment="center"
                                android:textSize="12sp" />

                            <SeekBar
                                android:id="@+id/sbTsf"
                                android:layout_width="238dp"
                                android:layout_height="30dp"
                                android:layout_weight="0.91"
                                android:max="11" />

                            <TextView
                                android:id="@+id/textView5"
                                android:layout_width="40dp"
                                android:layout_height="30dp"
                                android:paddingTop="7dp"
                                android:text="12mins"
                                android:textAlignment="center"
                                android:textSize="12sp" />
                        </LinearLayout>
                        -->
        </LinearLayout>
    </ScrollView>
</FrameLayout>
